refactor: 将短期记忆功能从 hoho-bot 迁移到 hoho-ai-proxy
- hoho-ai-proxy 新增记忆管理：MemoryController、MemoryService、AiMemoryConfig
- 使用 Spring AI 原生 ChatMemory + MessageChatMemoryAdvisor 自动管理对话历史
- 新增 /ai/memory/append 接口供 Bot 层追加记忆
- hoho-bot 删除 BotMemoryConfig、BotConversationMemoryService、RedisChatMemoryRepository
- BotService 不再手动拼记忆文本，改为通过 Feign 调用 ai-proxy 记忆接口
- ChatService 集成 Advisor 实现记忆自动注入
- 新增 AiProxyClient.appendMemory() 方法
- 新增 MemoryAppendRequest / AiMemoryAppendRequest 请求模型
- 新增记忆相关单元测试